@@ -35,6 +35,7 @@ import com.liferay.portal.kernel.service.UserLocalService;
 import com.liferay.portal.kernel.util.ArrayUtil;
 import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.Http;
+import com.liferay.portal.kernel.util.InetAddressUtil;
 import com.liferay.portal.kernel.util.LocaleUtil;
 import com.liferay.portal.kernel.util.Portal;
 import com.liferay.portal.kernel.util.StringUtil;
@@ -48,7 +49,6 @@ import com.liferay.portal.util.PropsValues;
 import java.io.IOException;
 
 import java.net.InetAddress;
-import java.net.URI;
 import java.net.URL;
 
 import java.util.HashMap;
@@ -167,9 +167,8 @@ public class PingbackMethodImpl implements Method {
 		long classPK = entry.getEntryId();
 
 		String body = StringBundler.concat(
-			"[...] ", getExcerpt(), " [...] [url=", _sourceURI, "]",
-			LanguageUtil.get(LocaleUtil.getSiteDefault(), "read-more"),
-			"[/url]");
+			"[...] ", getExcerpt(), " [...] <a href=", _sourceURI, ">",
+			LanguageUtil.get(LocaleUtil.getSiteDefault(), "read-more"), "</a>");
 
 		ServiceContext serviceContext = buildServiceContext(
 			companyId, groupId, entry.getUrlTitle());
@@ -334,9 +333,8 @@ public class PingbackMethodImpl implements Method {
 		if (ArrayUtil.isNotEmpty(paramArray)) {
 			return paramArray[0];
 		}
-		else {
-			return null;
-		}
+
+		return null;
 	}
 
 	@Reference(unbind = "-")
@@ -396,19 +394,10 @@ public class PingbackMethodImpl implements Method {
 
 	private boolean _isSourceURILocalNetwork() {
 		try {
-			URI uri = new URI(_sourceURI);
+			URL url = new URL(_sourceURI);
 
-			InetAddress inetAddress = InetAddress.getByName(uri.getHost());
-
-			if (inetAddress.isAnyLocalAddress() ||
-				inetAddress.isLinkLocalAddress() ||
-				inetAddress.isLoopbackAddress() ||
-				inetAddress.isSiteLocalAddress()) {
-
-				return true;
-			}
-
-			return false;
+			return InetAddressUtil.isLocalInetAddress(
+				InetAddress.getByName(url.getHost()));
 		}
 		catch (Exception e) {
 			if (_log.isDebugEnabled()) {
